--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,7 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.45"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+
+    // LottieFiles
+    implementation("com.airbnb.android:lottie-compose:6.0.1")
 }
