--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
     id("com.google.gms.google-services")
 }
 
@@ -78,8 +79,9 @@ dependencies {
     implementation "io.coil-kt:coil-compose:2.2.2"
 
     // Dagger - Hilt
-    implementation "com.google.dagger:hilt-android:2.46.1"
-    kapt "com.google.dagger:hilt-android-compiler:2.45"
+    implementation "com.google.dagger:hilt-android:2.47"
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.47'
+    kapt "com.google.dagger:hilt-android-compiler:2.47"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
