--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
     implementation "androidx.navigation:navigation-compose:2.6.0"
     implementation "io.coil-kt:coil-compose:2.2.2"
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
 
     // Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.47"
