--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 
 android {
     namespace 'hr.itrojnar.instagram'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "hr.itrojnar.instagram"
         minSdk 27
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -89,6 +89,24 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
+    // view model
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
+
     // LottieFiles
     implementation("com.airbnb.android:lottie-compose:6.0.1")
+
+    //navigation
+    implementation "androidx.navigation:navigation-compose:2.6.0"
+    //material icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+
+    //reflection
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.9.0"
+
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+    implementation "androidx.compose.ui:ui:$compose_ui_version"
+    implementation "androidx.compose.material:material:$compose_ui_version"
 }
