--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+    ext {
+        compose_ui_version = '1.5.0'
+    }
     ext.kotlin_version = '1.9.0'
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
