--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,7 @@ dependencies {
 
     // view model
     implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
 
     // LottieFiles
     implementation("com.airbnb.android:lottie-compose:6.0.1")
