--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,4 +150,9 @@ dependencies {
 
     testImplementation "org.mockito:mockito-core:5.5.0"
     testImplementation "org.mockito:mockito-inline:5.5.0"
+
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+
 }
